Convert spellbook chapters to more effectively use codecs (wip)